Kubernetes/V/Kubernetes/Classes/class10-11.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myd
spec:
  type: recreate
  replicas: 3
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      name: wpod
      labels:
        env: prod
    spec:
      Volumes:
        name: mypod-pvc
        persistentVolumeClaim:
          claimName: mypvc
      containers:
      - name: webc1
        image: "vimal13/apche-webserver-php"
        volumeMounts:
          mountPath: /var/www/html
          name: mypod-pvc
