Kubernetes/V/Kubernetes/Classes/class7.yml
apiVersion: v1
kind: Pod
metadata:
  name: mydb
  labels:
    app: mydb
spec:
  containers:
  - name: mydb
    image: mysql:5.7
kubectl apply -f config.yml


apiVersion: v1
kind: Secret
metadata:
  name: mysecret
type: Opaque
data:
  p: redhat

kubectl apply -f mysecret.yml



apiVersion: v1
kind: Pod
metadata:
  name: mydb
  labels:
    app: mydb
spec:
  containers:
  - name: mydb
    image: mysql:5.7
kubectl apply -f config.yml
kubectl describe pod

kubectl get pods myweb -O yaml
kubectl get secrets mysecret -O yaml
