Kubernetes/V/Kubernetes/Classes/class5.yml
apiVersion: v1
kind: Service
metadata:
  name: mylb1
spec:
  selector: 
    app: web
  ports:
    - targetPort: 80
      port: 8080



apiVersion: v1
kind: Service
metadata:
  name: mylb1
spec:
type: NodePort
  selector: 
    app: web
  ports:
    - targetPort: 80
      port: 8080
      nodePort: 30000
