Kubernetes/V/Kubernetes/Classes/class24.yml
Kubernetes Ingress

minikube addons enable ingress
kubectl get pods
kubectl get pods -n kube-system
kubectl get ingress

search
vim Dockerfile
from vimal13/apache-web-server-php
RUN echo " serach app !!" > /var/www/html/index.php
docker build -t vimala13/searchapp:v1 .
docker run -dit vimala13/searchapp:v1
curl IP



mail
vim Dockerfile
from vimal13/apache-web-server-php
RUN echo " mail app !!" > /var/www/html/index.php
docker build -t vimala13/mailapp:v1 .
docker run -dit vimala13/mailapp:v1
curl IP

docker push vimala13/mailapp:v1
docker push vimala13/searchapp:v1

kubectl create deployment maild --image=vimala13/mailapp:v1
kubectl get pods
kubectl scale deploy maild --replicas=2
kubectl expose deploy maild --port=80 --type=NodePort


kubectl create deployment searchd --image=vimala13/mailapp:v1 --replicas=3
kubectl scale deploy searchd --replicas=2
kubectl expose deploy searchd --port=80 --type=NodePort

kubectl get svc
Check both curl nodeip:portnumber

kubectl get pods -n kube-system
kubectl get svc -n kube-system

test nginx: nodeip:80

Edit host file  192.168.0.1 www.lw.com
curl http://www.lw.com

kubectl get ingress

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
   - host: *.rh.com
     http:
       paths:
        - path: /db
          pathType: Prefix
          backend:
            service:
              name: dbd
              port:
                number: 80
   - host: www.lw.com
     http:
       paths:
        - path: /search
          pathType: Prefix
          backend:
            service:
              name: searchd
              port:
                number: 80

        - path: /mail
          pathType: Prefix
          backend:
            service:
              name: maild
              port:
                number: 80

kubectl apply 
kubectl get ingress
curl http://IP/mail
curl http://www.lw.com/mail
kubectl describe ingress myingress
